[findbugs] Use Integer.valueOf() instead of new Integer()
Change-Id: Ic442aaa4eccc113c632b41a924f1f13a876bb738
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>